# Scalable-API-Gateway-with-Circuit-Breaker-Pattern

./: .gitignore  LICENSE  README.md  docker-compose.yml  prometheus.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
api-gateway/: Dockerfile  go.mod  go.sum  main.go  monitor.html
api-gateway/circuitbreaker/: circuit_breaker.go  circuit_breaker_test.go
cache-service/: Cargo.toml  Dockerfile
cache-service/src/: main.rs
k8s/: api-gateway.yaml  cache-service.yaml  prometheus.yaml
